Update email in changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ ricochet-refresh (3.0.0) focal; urgency=medium
 
   * debian packaging
 
- -- Marco Simonelli <msimonelli@protonmail.com>  Wed, 01 Jul 2020 16:14:29 +1000
+ -- Blueprint For Freespeech <ricochet@blueprintforfreespeech.net>  Wed, 01 Jul 2020 16:14:29 +1000
